# ReflowController

./: .gitattributes  .gitignore  .gitmodules  README.md
Hardware/: Reflow Oven.kicad_pcb  Reflow Oven.kicad_prl  Reflow Oven.kicad_pro  Reflow Oven.kicad_sch
Hardware/Rev 1/: Reflow Oven.kicad_pcb  Reflow Oven.kicad_prl  Reflow Oven.kicad_pro  Reflow Oven.kicad_sch  Reflow Oven.round-tracks-config
Hardware/Rev 1/Sheets/: Button Filter.kicad_sch  Display.kicad_sch  MOSFETs.kicad_sch  MicrocontrollerAlarm.kicad_sch  PawPad.kicad_sch  USB.kicad_sch
Hardware/Rev 1/bom/: ibom.html
Hardware/Rev 1/production/: netlist.ipc
Hardware/Sheets/: Button Filter.kicad_sch  Display.kicad_sch  ENC_Filter.kicad_sch  MOSFETs.kicad_sch  Microcontroller.kicad_sch  MicrocontrollerAlarm.kicad_sch  USB.kicad_sch
Hardware/packages3D/: 2350513-2.stp  2350513-3.stp  PTS636SM25JSMTRLFS.step
Hardware/production/: netlist.ipc
Scripts/: plotter.py
Software/: CMakeLists.txt  LICENSE  Software.code-workspace
Software/include/: Defines.hpp  error.hpp  heatmap.h  menu.hpp  oven.hpp  rotaryEncoder.hpp  version.h.in
Software/lib/Button/: CMakeLists.txt  README.md
Software/lib/Button/include/: Button.hpp
Software/lib/Button/src/: Button.cpp
Software/lib/Display/: CMakeLists.txt  README.md
Software/lib/Display/Fonts/: Font.h
Software/lib/Display/Specifics/: GC9A01.cpp  ST7789.cpp
Software/lib/Display/include/: Display.hpp  Display_Color.hpp  Display_Commands.hpp  Display_Enums.hpp  Display_Structs.hpp
Software/lib/Display/src/: Display.cpp  Graphics.cpp  Print.cpp
Software/lib/MCP9600/: CMakeLists.txt  README.md
Software/lib/MCP9600/include/: MCP9600.hpp
Software/lib/MCP9600/src/: MCP9600.cpp
Software/lib/Memory/: CMakeLists.txt  README.md
Software/lib/Memory/include/: Memory.hpp  Memory_Registers.hpp  Reflow_Defaults.hpp
Software/lib/Memory/src/: Memory.cpp
Software/lib/PID/: CMakeLists.txt  README.md
Software/lib/PID/include/: PID.hpp
Software/lib/PID/src/: PID.cpp
Software/scripts/programmer/: programmer.py
Software/scripts/serial_scanner/: scanner.py
Software/src/: main.cpp  menu.cpp  oven.cpp  rotaryEncoder.cpp
